<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>GfxPaint::ColourPlaneWidget</class>
 <widget class="QWidget" name="GfxPaint::ColourPlaneWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>383</width>
    <height>116</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QGridLayout" name="gridLayout" columnstretch="1,0,0,0,0">
   <item row="0" column="0">
    <widget class="QLabel" name="colourSpaceLabel">
     <property name="text">
      <string>&amp;Colour Space</string>
     </property>
     <property name="buddy">
      <cstring>colourSpaceComboBox</cstring>
     </property>
    </widget>
   </item>
   <item row="2" column="0" colspan="5">
    <layout class="QVBoxLayout" name="colourPlaneLayout"/>
   </item>
   <item row="0" column="4">
    <widget class="QCheckBox" name="quantiseCheckBox">
     <property name="text">
      <string>&amp;Quantise</string>
     </property>
    </widget>
   </item>
   <item row="0" column="3">
    <widget class="QCheckBox" name="alphaCheckBox">
     <property name="text">
      <string>&amp;Alpha</string>
     </property>
     <property name="checked">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item row="1" column="0">
    <widget class="QLabel" name="xYComponentsLabel">
     <property name="text">
      <string>&amp;XY Components</string>
     </property>
     <property name="buddy">
      <cstring>xYComponentsComboBox</cstring>
     </property>
    </widget>
   </item>
   <item row="0" column="1">
    <widget class="QComboBox" name="colourSpaceComboBox"/>
   </item>
   <item row="1" column="1" colspan="4">
    <widget class="QComboBox" name="xYComponentsComboBox"/>
   </item>
  </layout>
 </widget>
 <tabstops>
  <tabstop>colourSpaceComboBox</tabstop>
  <tabstop>alphaCheckBox</tabstop>
  <tabstop>quantiseCheckBox</tabstop>
  <tabstop>xYComponentsComboBox</tabstop>
 </tabstops>
 <resources/>
 <connections/>
</ui>
